--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tingle-style",
   "version": "1.0.0",
   "description": "base style for tinglejs",
-  "repository": "",
+  "repository": "https://github.com/tinglejs/tingle-style",
   "files": [
     "dist",
     "README.md"
@@ -14,11 +14,12 @@
     "gulp-concat": "^2.5.2",
     "gulp-cssimport": "^1.3.1",
     "gulp-cssmin": "^0.1.6",
+    "gulp-just-replace": "^1.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~1.5.1",
     "gulp-stylus": "~2.0.1"
   },
   "scripts": {},
   "author": "gnosaij",
-  "license": "Apache 2"
+  "license": "MIT"
 }
