--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "email": "gnosaij@yeah.net"
   },
   "version": "0.2.1",
-  "description": "base style for tinglejs",
+  "description": "tingle 基础样式。",
   "repository": "https://github.com/tinglejs/tingle-style",
   "dependencies": {},
   "devDependencies": {
