--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "name": "gnosaij",
     "email": "gnosaij@yeah.net"
   },
-  "version": "0.2.1",
+  "main": "src/util.js",
+  "version": "0.3.0",
   "description": "tingle 基础样式。",
   "repository": "https://github.com/tinglejs/tingle-style",
   "dependencies": {},
